# BioFW.Thermo

./: CMakeLists.txt  README.md
Apps/: CMakeLists.txt  primaryBanks.h  structures.h
Apps/eval/: eval.cpp
Apps/include/: console.h  primaryBanks.h  processes.h  structures.h
Apps/jaffee/: main.cpp
Apps/svm/: mainsvm.cpp
Apps/thermo/: main.cpp
OpenCV/include/BioFW/FeatureVector/SpatialHistogram/: WLDHistogramExtractor.h
OpenCV/src/: MatProvider.cpp
OpenCV/src/BiometricSample/: MatSample.cpp
OpenCV/src/Block/ScoreFusion/: SVMScoreFusion.cpp  TrainableScoreFusion.cpp
OpenCV/src/FeatureVector/: MatFV.cpp
OpenCV/src/FeatureVector/Filter/: FilterFeatureExtractor.cpp  GaborFeatureExtractor.cpp
OpenCV/src/FeatureVector/Filter/helpers/: common.h
OpenCV/src/FeatureVector/Statistical/: ZScoreExtractor.cpp
examples/face/: CMakeLists.txt
